--- a/Language/htmlcss/practice/practice6.css
+++ b/Language/htmlcss/practice/practice6.css
@@ -190,6 +190,10 @@ body > div > div:nth-child(2) > div:nth-child(1) > div:nth-child(2) {
   background-color: #222a36;
 }
 
+.text-align-justify {
+  text-align: justify;
+}
+
 .width-height-upper-2 {
   width: 100px;
   height: 120px;
@@ -229,6 +233,10 @@ body > div > div:nth-child(2) > div:nth-child(1) > div:nth-child(2) {
 
 .mgl-3 {
   margin-left: 3px;
+}
+
+.mgl-30 {
+  margin-left: 30px;
 }
 
 .mgt-14 {
